--- a/views/Expense_Report_Form.pug
+++ b/views/Expense_Report_Form.pug
@@ -21,7 +21,7 @@
 <script src="https://cdn.jotfor.ms/js/vendor/jquery.maskedinput.min.js?v=3.3.24937" type="text/javascript"></script>
 <script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
 <script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.24937" type="text/javascript"></script>
-<script type="text/javascript">
+script(type="text/javascript").
 	JotForm.init(function(){
 
  JotForm.calendarMonths = ["January","February","March","April","May","June","July","August","September","October","November","December"];
@@ -51,7 +51,6 @@ if (window.JotForm && JotForm.accessible) $('input_6').setAttribute('tabindex',0
    JotForm.prepareCalculationsOnTheFly([null,{"name":"expenseReport","qid":"1","text":"Expense Report Form","type":"control_head"},{"name":"submit2","qid":"2","text":"Submit","type":"control_button"},{"name":"employeeName","qid":"3","text":"Employee Name","type":"control_dropdown"},null,{"name":"expenseType","qid":"5","text":"Expense Type","type":"control_radio"},{"name":"description","qid":"6","text":"Description","type":"control_textarea"},null,{"name":"dateamp8","qid":"8","text":"Date & Time of the Expense","type":"control_datetime"},null,{"name":"paymentType","qid":"10","text":"Payment Type","type":"control_radio"},null,{"name":"department","qid":"12","text":"Department","type":"control_dropdown"},null,null,{"name":"cost","qid":"15","text":"Cost","type":"control_textbox"}]);
    setTimeout(function() {
 JotForm.paymentExtrasOnTheFly([null,{"name":"expenseReport","qid":"1","text":"Expense Report Form","type":"control_head"},{"name":"submit2","qid":"2","text":"Submit","type":"control_button"},{"name":"employeeName","qid":"3","text":"Employee Name","type":"control_dropdown"},null,{"name":"expenseType","qid":"5","text":"Expense Type","type":"control_radio"},{"name":"description","qid":"6","text":"Description","type":"control_textarea"},null,{"name":"dateamp8","qid":"8","text":"Date & Time of the Expense","type":"control_datetime"},null,{"name":"paymentType","qid":"10","text":"Payment Type","type":"control_radio"},null,{"name":"department","qid":"12","text":"Department","type":"control_dropdown"},null,null,{"name":"cost","qid":"15","text":"Cost","type":"control_textbox"}]);}, 20); 
-</script>
 </head>
 <body>
 <form class="jotform-form" action="https://submit.jotform.com/submit/211097499488170/" method="post" name="form_211097499488170" id="211097499488170" accept-charset="utf-8" autocomplete="on">
@@ -236,20 +235,15 @@ JotForm.paymentExtrasOnTheFly([null,{"name":"expenseReport","qid":"1","text":"Ex
       </li>
     </ul>
   </div>
-  <script>
-  JotForm.showJotFormPowered = "new_footer";
-  </script>
-  <script>
-  JotForm.poweredByText = "Powered by JotForm";
-  </script>
+  <script>JotForm.showJotFormPowered = "new_footer";</script>
+  <script>JotForm.poweredByText = "Powered by JotForm";</script>
   <input type="hidden" class="simple_spc" id="simple_spc" name="simple_spc" value="211097499488170" />
-  <script type="text/javascript">
-  var all_spc = document.querySelectorAll("form[id='211097499488170'] .si" + "mple" + "_spc");
-for (var i = 0; i < all_spc.length; i++)
-{
-  all_spc[i].value = "211097499488170-211097499488170";
-}
-  </script>
+  script(type="text/javascript").
+    var all_spc = document.querySelectorAll("form[id='211097499488170'] .si" + "mple" + "_spc");
+    for (var i = 0; i < all_spc.length; i++)
+    {
+      all_spc[i].value = "211097499488170-211097499488170";
+    }
   <div class="formFooter-heightMask">
   </div>
   <div class="formFooter f6">
