--- a/views/Expense_Report_Form.pug
+++ b/views/Expense_Report_Form.pug
@@ -103,15 +103,13 @@ script(type="text/javascript").
             <div style="display:none">
               <span class="form-sub-label-container" style="vertical-align:top">
                 <input type="tel" class="form-textbox validate[limitDate]" id="month_8" name="q8_dateamp8[month]" size="2" data-maxlength="2" data-age="" maxLength="2" value="" autoComplete="off" aria-labelledby="label_8 sublabel_8_month" />
-                <span class="date-separate" aria-hidden="true">
-                   -
+                <span class="date-separate" aria-hidden="true"> -
                 </span>
                 <label class="form-sub-label" for="month_8" id="sublabel_8_month" style="min-height:13px" aria-hidden="false"> Month </label>
               </span>
               <span class="form-sub-label-container" style="vertical-align:top">
                 <input type="tel" class="form-textbox validate[limitDate]" id="day_8" name="q8_dateamp8[day]" size="2" data-maxlength="2" data-age="" maxLength="2" value="" autoComplete="off" aria-labelledby="label_8 sublabel_8_day" />
-                <span class="date-separate" aria-hidden="true">
-                   -
+                <span class="date-separate" aria-hidden="true"> -
                 </span>
                 <label class="form-sub-label" for="day_8" id="sublabel_8_day" style="min-height:13px" aria-hidden="false"> Day </label>
               </span>
